tests/snapshots/code_text_fallback_param__code_text_fallback_Sample.snap
---
source: tests/code_text_fallback_param.rs
expression: out
---
import React from 'react';

…

export default function Sample({ name }: Props) {
…
…
  …
…
…
…

…
