tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_java.snap
---
source: tests/code_text_fallback_param.rs
expression: out
---
public class Sample {
    static void greet(String name) {
    …
    }
…

  …
…
…

…
