tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_java_detailed.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
public class Sample {
… 2 more lines …
… 2 more lines …
… 3 more lines …
… 5 more lines …
