tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_java_detailed_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
public class Sample {
… 2 more lines …
… 2 more lines …
… 2 more lines …
… 5 more lines …

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 6,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 106,
    "chars": 0,
    "lines": 6
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "detailed",
    "template": "text"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "public class Sample {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 3
        },
        "omitted_after": 2
      },
      {
        "id": 0,
        "index_in_parent_array": 3,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "id": 0,
        "index_in_parent_array": 6,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      }
    ],
    "gaps": [
      {
        "before_child_index": 1,
        "omitted_count": 2
      },
      {
        "before_child_index": 2,
        "omitted_count": 2
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 7
    }
  },
  "selection": {
    "top_k": 5
  },
  "template": "text"
}
