tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_java_detailed_json.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 113
expression: out_json
---
[
  [ /* 3 more items */ ],
  /* 2 more items */
  [ /* 2 more items */ ]
  /* 5 more items */
]
