tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_java_stdout.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 142
expression: out_default
---
 1: public class Sample {
 2:     static void greet(String name) {
 4:     }
16:     }
28: }
