tests/snapshots/code_text_fallback_param__code_text_fallback_Sample_java_strict_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: public class Sample {
 2:     static void greet(String name) {
 4:     }
 5: 
16:     }
28: }
29: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 4,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 103,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "strict",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "public class Sample {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    static void greet(String name) {",
                "id": 0,
                "index_in_parent_array": 1,
                "kind": "string",
                "metrics": {}
              },
              {
                "id": 0,
                "index_in_parent_array": 2,
                "kind": "array",
                "metrics": {
                  "array_len": 1
                }
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 2
            },
            "omitted_before": 1
          },
          {
            "children": [
              {
                "atomic_token": "    }",
                "id": 0,
                "index_in_parent_array": 3,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 3,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 3
          }
        ],
        "gaps": [
          {
            "before_child_index": 2,
            "omitted_count": 1
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 3
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 4,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "    }",
                "id": 0,
                "index_in_parent_array": 15,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 15,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 15
          }
        ],
        "gaps": [
          {
            "before_child_index": 1,
            "omitted_count": 10
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 3
        },
        "omitted_before": 4
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 27,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 5,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 27
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 28,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 6,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 28
      }
    ],
    "gaps": [
      {
        "before_child_index": 2,
        "omitted_count": 3
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 7
    }
  },
  "selection": {
    "top_k": 16
  },
  "template": "code"
}
